cmake_minimum_required(VERSION 3.23)
project(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_6_92 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_6_92
        fichier_louis.c
        header.h
        header_Mike.h
        test_file_Adam.c
        test_Mike.c
        test_Victor.c)
